--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,8 @@ jobs:
       env:
         secret: ${{ secrets.DOCKER_HUB_SECRET }}
       run: |
+        pwd
+        ls
         docker build . --file Dockerfile --tag wzhy1234/ffmpeg-qsv:latest
         docker login -u wzhy1234 -p $secret
         docker push wzhy1234/ffmpeg-qsv:latest
